istio/Destinationrule/student_destinationrule.yaml
#for client to take request only in tls
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: studentappv1desrule
spec:
  host: studentservice.student.svc.cluster.local
  trafficPolicy: 
    tls:
      mode: ISTIO_MUTUAL
