istio/Destinationrule/student_destinationrule_canary.yaml
#for client to take request only in tls
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: studentappv1desrule
spec:
  host: studentservice.student.svc.cluster.local
  trafficPolicy: 
    tls:
      mode: ISTIO_MUTUAL
  subsets: 
  - name: v1
    labels: 
      app: studentapp
      version: "v1"
  - name: v2
    labels: 
      app: studentapp
      version: "v2"
